--- a/packages/telescope-theme-medbook/lib/client/templates/main.html
+++ b/packages/telescope-theme-medbook/lib/client/templates/main.html
@@ -74,6 +74,9 @@
             <div style="display:none;" class="crf_form" id="TreatmentHistoryElement" > 
                 {{>quickForm collection="TreatmentHistory" id="TreatmentHistoryQuickForm"  type="insert" }} </div>
 
+
+            <div class="hotdiv"></div>
+
         </div> 
 
 
