--- a/client/views/posts/post_submit.html
+++ b/client/views/posts/post_submit.html
@@ -71,6 +71,11 @@
       <div class="form-actions">
         <input type="submit" class="button" value="{{i18n "Submit"}}" />
       </div>
+
+      <div id="fileDropID">
+        {{> collTest}}
+      </div>
+
     </form>
   </div>
 </template>
