--- a/client/views/files/file-upload.html
+++ b/client/views/files/file-upload.html
@@ -1,4 +1,4 @@
-<template name="collTest">
+<template name="FileUploadCollection">
   <!--
   <div class="container panel">
     <h3>file-collection Test App</h3>
