--- a/client/views/posts/post_page.html
+++ b/client/views/posts/post_page.html
@@ -8,5 +8,6 @@
     {{/if}}
     {{> UI.dynamic template=comment_form}}
     {{> UI.dynamic template=comment_list}}
+    {{> folder}}
   </div>
 </template>
