--- a/client/views/posts/post_submit.html
+++ b/client/views/posts/post_submit.html
@@ -73,7 +73,7 @@
       </div>
 
       <div id="fileDropID">
-        {{> collTest}}
+        {{> FileUploadCollection}}
       </div>
 
     </form>
