Refreshed from Telescope repo

--- a/client/views/posts/post_page.html
+++ b/client/views/posts/post_page.html
@@ -8,6 +8,7 @@
     {{/if}}
     {{> UI.dynamic template=comment_form}}
     {{> UI.dynamic template=comment_list}}
-    {{> folder}}
+
+    {{> folder}} <!-- MedBook -->
   </div>
 </template>
