--- a/client/views/posts/post_submit.html
+++ b/client/views/posts/post_submit.html
@@ -71,11 +71,7 @@
       <div class="form-actions">
         <input type="submit" class="button" value="{{i18n "Submit"}}" />
       </div>
-
-      <div id="fileDropID">
-        {{> FileUploadCollection}}
-      </div>
-
+      {{> folder}} <!-- MedBook -->
     </form>
   </div>
 </template>
