Collaboration route begins to work.

--- a/client/views/posts/modules/post_content.html
+++ b/client/views/posts/modules/post_content.html
@@ -1,5 +1,7 @@
 <template name="postContent">
   <div class="post-info">
+    {{> UI.dynamic template="postHeading"}}
+
     <h3 class="post-heading">
       {{#each postHeading}}
         {{> UI.dynamic template=getTemplate data=..}}
