--- a/client/views/posts/post_edit.html
+++ b/client/views/posts/post_edit.html
@@ -33,6 +33,7 @@
               <input id="category_{{_id}}" type="checkbox" value="{{_id}}" name="category" {{checked}} /> {{name}}
             </label>
             {{/each}}
+            <input id="new_category" type="text" placeHolder="New Category"/>
           </div>
         </div>
         {{/if}}
