--- a/client/views/posts/post_submit.html
+++ b/client/views/posts/post_submit.html
@@ -22,6 +22,7 @@
             <input id="category_{{_id}}" type="checkbox" value="{{_id}}" name="category" /> {{name}}
           </label>
           {{/each}}
+          <input id="new_category" type="text" placeHolder="New Category"/>
         </div>
       </div>
       {{/if}}
