--- a/packages/telescope-tags/lib/client/views/categories.html
+++ b/packages/telescope-tags/lib/client/views/categories.html
@@ -8,8 +8,8 @@
         <div class="controls"><input id="name" type="text" value="" /></div>
       </div>
       <div class="control-group">
-        <label>Order</label>
-        <div class="controls"><input id="order" type="number" value="" /></div>
+        <label>Roles</label>
+        <div class="controls"><input id="role" type="text" value="" /></div>
       </div>
       <div class="form-actions">
         <input type="submit" class="button" value="Submit" />
