--- a/packages/telescope-collaboration/lib/client/views/post_collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/post_collaboration.html
@@ -1,5 +1,9 @@
 <template name="postCollaboration">
-  {{#each collaboration}}
-    <a href="{{collaborationLink}}" class="post-collaboration collaboration-{{slug}}">{{name}}</a>
+  {{#each collaborations}}
+      <a href="/collaboration/{{this}}" class="post-collaboration">{{this}}</a>
   {{/each}}
+  <a onclick="$(this).next().toggle()">
+  <i class="fa fa-plus-square"></i>
+  </a>
+    <input hidden data-_id={{_id}} id="addCollaborators"  name="addCollaborators"  type="text" placeHolder="collaborator(s)"/>
 </template>
