--- a/client/views/posts/posts_list.html
+++ b/client/views/posts/posts_list.html
@@ -1,7 +1,10 @@
 <template name="posts_list">
   {{> UI.dynamic template=postsListIncoming data=incoming}}
-  <div class="posts-wrapper grid grid-module">
-    <div class="posts list">
+    <h3 class="collaborationGridTitle">Browse {{collaborationName}} Collaboration</h3>
+
+    <div class="posts-wrapper grid grid-module">
+
+      <div class="posts list">
       {{#each posts}}
         {{> UI.dynamic template=post_item}}
       {{/each}}
