--- a/packages/telescope-collaboration/lib/client/views/collaboration_item.css
+++ b/packages/telescope-collaboration/lib/client/views/collaboration_item.css
@@ -7,9 +7,15 @@
 
 }
 
+.search-field {
+    border: 1px  inset lightgray ! important;
+}
 
-.collaboration-item  label {
-    font-size: 14px;
+
+.collaboration-label {
+    font-size: 20px;
+    padding-top:10px !important;
+    margin-bottom:0px !important;
 }
 
 .collaboration-item div {
