--- a/packages/telescope-collaboration/lib/client/views/collaboration_item.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration_item.html
@@ -1,31 +1,49 @@
 <template name="AddCollaboration">
-    <h3>Add Collaboration</h3>
 
-    <div class="collaboration-item" >
+    <div class="collaboration-item" style="z-index:100!important;" >
+        <h3 style="color:white;text-align:center; margin:0; padding:0; font-size:26px;" >Add Collaboration</h3>
+
         <form>
-            <div class="control-group inline">
-                <a class="button submit edit-link" href="#">Save</a>
+            <div style="width:auto;" class="control-group inline">
+                <table>
+                    <tbody>
+                    <tr>
+                        <td style="width:600px;padding-right:0px;">
+                            <div style="float:left; margin:0;" class="controls">
+                                <label class="collaboration-label">Collaboration Name</label>
+                                <input class="collaboration-name" id="name_{{_id}}" type="text" value="{{name}}"
+                                       placeholder="A collaboration needs a simple name"/>
+                                <label class="collaboration-label">Description</label>
+                                <input class="collaboration-description" id="description_{{_id}}" type="text"
+                                       value="{{description}}" placeholder="Fill in description"/>
+                                <label class="collaboration-label">Collaborators</label>
+                                <input class="collaboration-collaborators" name="collaborators"
+                                       id="collaborators_{{_id}}" type="text" placeholder="Add collaborators"/>
+                                <label class="collaboration-label">Administrators</label>
+                                <input class="collaboration-administrators" name="adminstrators"
+                                       id="adminstrators_{{_id}}" type="text" placeholder="Add adminstrators"/>
+                                <label class="collaboration-label">Invite</label>
+                                <input class="collaboration-invitations" name="invitations" id="invitations_{{_id}}"
+                                       type="text" placeholder="invite collaborators"/>
+                            </div>
+                        </td>
 
-                <div class="controls">
-                    <label class="collaboration-label" >Collaboration Name</label>
-                    <input class="collaboration-name" id="name_{{_id}}" type="text" value="{{name}}"  placeholder="A collaboration needs a simple name"/>
-                    <label class="collaboration-label">Description</label>
-                    <input class="collaboration-description" id="description_{{_id}}" type="text" value="{{description}}"  placeholder="Fill in description"/>
-                    <label class="collaboration-label">Collaborators</label>
-                    <input class="collaboration-collaborators" name="collaborators" id="collaborators_{{_id}}" type="text"  placeholder="Add collaborators"/>
+                        <td width="25px">
+                            <div style="float:right; align:center;">
+                                <a style=" width:100px;" class="button submit edit-link" href="#"><center>Save</center></a>
 
-                    <label class="collaboration-label">Administrators</label>
-                    <input class="collaboration-administrators" name="adminstrators" id="adminstrators_{{_id}}" type="text"  placeholder="Add adminstrators"/>
+                                <a style="margin-top:100px; width:100px;" class="button cancel edit-link" href="#" onclick="hideAddCollaboration()">Cancel</a>
+                            </div>
+                        </td>
 
-
-                    <label class="collaboration-label">Invite</label>
-                    <input class="collaboration-invitations" name="invitations" id="invitations_{{_id}}" type="text"  placeholder="invite collaborators"/>
+                    </tr>
 
 
-
-                </div>
+                    </tbody>
+                </table>
 
             </div>
         </form>
     </div>
+
 </template>
