Beginning to look neat.

--- a/client/views/nav/nav.html
+++ b/client/views/nav/nav.html
@@ -35,5 +35,10 @@
       </ul>
     {{/if}}
 
+      <div id="showCollaboration" hidden class="grid-small grid-module dialog admin">
+        {{> AddCollaboration}}
+      </div>
+
   </header>
+
 </template>
