--- a/client/views/posts/posts_list.html
+++ b/client/views/posts/posts_list.html
@@ -6,7 +6,7 @@
   {{else}}
     <h3 class="collaborationGridTitle">Browse Recent Posts</h3>
   {{/if}}
-  {{#if posts}}}
+  {{#if posts}}
       <div class="posts-wrapper grid grid-module">
         {{#each posts}}
           {{> UI.dynamic template=post_item}}
