--- a/packages/telescope-collaboration/lib/client/views/post_collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/post_collaboration.html
@@ -1,7 +1,7 @@
 <template name="collaborationTagList">
 
 
-  {{#each collaborations}}
+  {{#each collaboration}}
       <a href="{{collaborationLink}}" class="post-collaboration">{{collaborationName}}</a>
   {{/each}}
 
