--- a/packages/telescope-collaboration/lib/client/views/post_collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/post_collaboration.html
@@ -9,7 +9,7 @@
 
   <form id="addCollaboratorsForm" type="button">
   <a onclick="show('addCollaboratorsPoppup')">
-      <i class="fa fa-plus-square">add collaboration</i>
+      <i class="fa fa-plus-square"  title="add collaboration"></i>
       <div hidden class="popupControl" id="addCollaboratorsPoppup" ><h4>Type in names of users or other collaborations:</h4>
           <input  data-_id={{_id}} id="addCollaborators"  name="addCollaborators"  type="text" placeHolder="collaborator(s)"/>
           <button id="addCollaboratorsDone">Done</button>
